minor ui changes and functionality changes